syntax = "proto3";
package watchout.player;

message GreetingRequest {
  int32 id = 1;
  string address = 2;
  int32 port = 3;
  int32 pitchStartX = 4;
  int32 pitchStartY = 5;
}

message Empty {

}

message LeaderMessage {
  int32 id = 1;
}

service PlayerPeerService {
  rpc greeting(GreetingRequest) returns (Empty);
  rpc election(Empty) returns (Empty);
  rpc leader(LeaderMessage) returns (Empty);
}
